@@ -1,3 +1,4 @@
+* Re-position buttons on Binary/Image widget
 * Improve treeview headers
 * Update states of both toolbar and menu
 * Improve toolbar order
